--- a/index.html
+++ b/index.html
@@ -258,15 +258,67 @@
             <tr>
                 <td>16</td>
                 <td>Atlético-PR</td>
-                <td>8</td>
+                <td>7</td>
+                <td>7</td>
+                <td>2</td>
+                <td>1</td>
+                <td>4</td>
+                <td>10</td>
+                <td>15</td>
+                <td>-5</td>
+                <td>33.3</td>
+            </tr>
+            <tr>
+                <td>17</td>
+                <td>Internacional</td>
+                <td>6</td>
                 <td>6</td>
                 <td>2</td>
+                <td>1</td>
+                <td>5</td>
+                <td>10</td>
+                <td>15</td>
+                <td>-5</td>
+                <td>33.3</td>
+            </tr>
+            <tr>
+                <td>18</td>
+                <td>Atletico-MG</td>
+                <td>6</td>
+                <td>7</td>
                 <td>2</td>
+                <td>0</td>
+                <td>5</td>
+                <td>10</td>
+                <td>16</td>
+                <td>-6</td>
+                <td>28.6</td>
+            </tr>
+            <tr>
+                <td>19</td>
+                <td>Vasco</td>
+                <td>5</td>
+                <td>7</td>
+                <td>1</td>
+                <td>2</td>
+                <td>4</td>
+                <td>5</td>
+                <td>12</td>
+                <td>-7</td>
+                <td>23.8</td>
+            </tr>
+            <tr>
+                <td>20</td>
+                <td>Atlético-GO</td>
+                <td>1</td>
+                <td>6</td>
+                <td>0</td>
+                <td>1</td>
+                <td>5</td>
                 <td>3</td>
                 <td>9</td>
-                <td>11</td>
-                <td>-2</td>
-                <td>44.4</td>
+                <td>-6</td>
+                <td>5.6</td>
             </tr>
         </tbody>
     </table>
