Correção de tabelas brasileirão

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <br>
     <hr>
     <br>
-    <table>
+    <table class="brasileiro">
         <thead>
-            <tr>
+            <tr class="titulo">
                 <td></td>
                 <td></td>
                 <td>P</td>
@@ -61,266 +61,278 @@
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
-                <td>Corinthians</td>
-                <td>17</td>
+                <td class="libertadores">1</td>
+                <td class="nomes">Corinthians</td>
+                <td class="pontos">17</td>
                 <td>7</td>
-                <td>5</td>
+                <td class="v">5</td>
                 <td>2</td>
-                <td>0</td>
+                <td class="d">0</td>
                 <td>15</td>
-                <td>8</td>
+                <td class="d">8</td>
                 <td>7</td>
-                <td>81</td>
+                <td class="d">81</td>
             </tr>
             <tr>
-                <td>2</td>
-                <td>Ceará</td>
-                <td>17</td>
+                <td class="libertadores">2</td>
+                <td class="nomes">Ceará</td>
+                <td class="pontos">17</td>
                 <td>7</td>
-                <td>5</td>
+                <td class="v">5</td>
                 <td>2</td>
-                <td>0</td>
+                <td class="d">0</td>
                 <td>7</td>
-                <td>1</td>
+                <td class=d>1</td>
                 <td>6</td>
-                <td>81</td>
+                <td class=d>81</td>
             </tr>
             <tr>
-                <td>3</td>
-                <td>Fluminense</td>
-                <td>15</td>
+                <td class="libertadores">3</td>
+                <td class="nomes">Fluminense</td>
+                <td class="pontos">15</td>
                 <td>7</td>
-                <td>5</td>
+                <td class="v">5</td>
                 <td>0</td>
-                <td>2</td>
+                <td class="d">2</td>
                 <td>11</td>
-                <td>5</td>
+                <td class=d>5</td>
                 <td>6</td>
-                <td>71.4</td>
+                <td class=d>71.4</td>
             </tr>
             <tr>
-                <td>4</td>
-                <td>Santos</td>
-                <td>12</td>
+                <td class="pre-libertadores">4</td>
+                <td class="nomes">Santos</td>
+                <td class="pontos">12</td>
                 <td>7</td>
+                <td class="v">3</td>
                 <td>3</td>
-                <td>3</td>
-                <td>1</td>
+                <td class="d">1</td>
                 <td>15</td>
-                <td>10</td>
+                <td class=d>10</td>
                 <td>5</td>
-                <td>57.1</td>
+                <td class=d>57.1</td>
             </tr>
             <tr>
-                <td>5</td>
-                <td>São Paulo</td>
-                <td>11</td>
+                <td class="sulamericana">5</td>
+                <td class="nomes">São Paulo</td>
+                <td class="pontos">11</td>
                 <td>7</td>
-                <td>3</td>
+                <td class="v">3</td>
                 <td>2</td>
-                <td>2</td>
+                <td class="d">2</td>
                 <td>9</td>
-                <td>6</td>
+                <td class=d>6</td>
                 <td>3</td>
-                <td>52.4</td>
+                <td class=d>52.4</td>
             </tr>
             <tr>
-                <td>6</td>
-                <td>Goiás</td>
-                <td>10</td>
+                <td class="sulamericana">6</td>
+                <td class="nomes">Goiás</td>
+                <td class="pontos">10</td>
                 <td>7</td>
-                <td>3</td>
+                <td class="v">3</td>
                 <td>1</td>
-                <td>3</td>
+                <td class="d">3</td>
                 <td>9</td>
-                <td>10</td>
+                <td class=d>10</td>
                 <td>-1</td>
-                <td>47.6</td>
+                <td class=d>47.6</td>
             </tr>
             <tr>
+                <td class="sulamericana">7</td>
+                <td class="nomes">Botafogo</td>
+                <td class="pontos">9</td>
                 <td>7</td>
-                <td>Botafogo</td>
-                <td>9</td>
-                <td>7</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>3</td>
-                <td>2</td>
+                <td class="d">2</td>
                 <td>13</td>
-                <td>11</td>
+                <td class=d>11</td>
                 <td>2</td>
-                <td>42.9</td>
+                <td class=d>42.9</td>
             </tr>
             <tr>
-                <td>8</td>
-                <td>Flamengo</td>
-                <td>9</td>
+                <td class="sulamericana">8</td>
+                <td class="nomes">Flamengo</td>
+                <td class="pontos">9</td>
                 <td>7</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>3</td>
-                <td>2</td>
+                <td class="d">2</td>
                 <td>9</td>
-                <td>8</td>
+                <td class=d>8</td>
                 <td>1</td>
-                <td>42.9</td>
+                <td class=d>42.9</td>
             </tr>
             <tr>
-                <td>9</td>
-                <td>Cruzeiro</td>
-                <td>9</td>
+                <td class="sulamericana">9</td>
+                <td class="nomes">Cruzeiro</td>
+                <td class="pontos">9</td>
                 <td>6</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>3</td>
-                <td>1</td>
+                <td class="d">1</td>
                 <td>7</td>
-                <td>6</td>
+                <td class=d>6</td>
                 <td>1</td>
-                <td>50</td>
+                <td class=d>50</td>
             </tr>
             <tr>
-                <td>10</td>
-                <td>Guarani</td>
-                <td>9</td>
+                <td class="sulamericana">10</td>
+                <td class="nomes">Guarani</td>
+                <td class="pontos">9</td>
                 <td>6</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>3</td>
-                <td>1</td>
+                <td class="d">1</td>
                 <td>7</td>
-                <td>7</td>
+                <td class=d>7</td>
                 <td>0</td>
-                <td>50</td>
+                <td class=d>50</td>
             </tr>
             <tr>
-                <td>11</td>
-                <td>Palmeiras</td>
-                <td>8</td>
+                <td class="sulamericana">11</td>
+                <td class="nomes">Palmeiras</td>
+                <td class="pontos">8</td>
                 <td>6</td>
+                <td class="v">2</td>
                 <td>2</td>
-                <td>2</td>
-                <td>2</td>
+                <td class="d">2</td>
                 <td>5</td>
-                <td>4</td>
+                <td class=d>4</td>
                 <td>1</td>
-                <td>44.4</td>
+                <td class=d>44.4</td>
             </tr>
             <tr>
-                <td>12</td>
-                <td>Grêmio</td>
-                <td>8</td>
+                <td class="sulamericana">12</td>
+                <td class="nomes">Grêmio</td>
+                <td class="pontos">8</td>
                 <td>7</td>
+                <td class="v">2</td>
                 <td>2</td>
-                <td>2</td>
-                <td>3</td>
+                <td class="d">3</td>
                 <td>10</td>
-                <td>11</td>
+                <td class=d>11</td>
                 <td>-1</td>
-                <td>38.1</td>
+                <td class=d>38.1</td>
             </tr>
             <tr>
-                <td>13</td>
-                <td>Avai</td>
-                <td>8</td>
+                <td class="outros">13</td>
+                <td class="nomes">Avai</td>
+                <td class="pontos">8</td>
                 <td>7</td>
+                <td class="v">2</td>
                 <td>2</td>
-                <td>2</td>
-                <td>3</td>
+                <td class="d">3</td>
                 <td>10</td>
-                <td>11</td>
+                <td class=d>11</td>
                 <td>-1</td>
-                <td>38.1</td>
+                <td class=d>38.1</td>
             </tr>
             <tr>
-                <td>14</td>
-                <td>Vitoria</td>
-                <td>8</td>
+                <td class="outros">14</td>
+                <td class="nomes">Vitoria</td>
+                <td class="pontos">8</td>
                 <td>7</td>
+                <td class="v">2</td>
                 <td>2</td>
-                <td>2</td>
-                <td>3</td>
+                <td class="d">3</td>
                 <td>7</td>
-                <td>8</td>
+                <td class=d>8</td>
                 <td>-1</td>
-                <td>38.1</td>
+                <td class=d>38.1</td>
             </tr>
             <tr>
-                <td>15</td>
-                <td>Prudente</td>
-                <td>8</td>
+                <td class="outros">15</td>
+                <td class="nomes">Prudente</td>
+                <td class="pontos">8</td>
                 <td>6</td>
+                <td class="v">2</td>
                 <td>2</td>
-                <td>2</td>
-                <td>3</td>
+                <td class="d">3</td>
                 <td>9</td>
-                <td>11</td>
+                <td class=d>11</td>
                 <td>-2</td>
-                <td>44.4</td>
+                <td class=d>44.4</td>
             </tr>
             <tr>
-                <td>16</td>
-                <td>Atlético-PR</td>
+                <td class="outros">16</td>
+                <td class="nomes">Atlético-PR</td>
+                <td class="pontos">7</td>
                 <td>7</td>
-                <td>7</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>1</td>
-                <td>4</td>
+                <td class="d">4</td>
                 <td>10</td>
-                <td>15</td>
+                <td class=d>15</td>
                 <td>-5</td>
-                <td>33.3</td>
+                <td class=d>33.3</td>
             </tr>
             <tr>
-                <td>17</td>
-                <td>Internacional</td>
+                <td class="rebaixados">17</td>
+                <td class="nomes">Internacional</td>
+                <td class="pontos">6</td>
                 <td>6</td>
-                <td>6</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>1</td>
-                <td>5</td>
+                <td class="d">5</td>
                 <td>10</td>
-                <td>15</td>
+                <td class=d>15</td>
                 <td>-5</td>
-                <td>33.3</td>
+                <td class=d>33.3</td>
             </tr>
             <tr>
-                <td>18</td>
-                <td>Atletico-MG</td>
-                <td>6</td>
+                <td class="rebaixados">18</td>
+                <td class="nomes">Atletico-MG</td>
+                <td class="pontos">6</td>
                 <td>7</td>
-                <td>2</td>
+                <td class="v">2</td>
                 <td>0</td>
-                <td>5</td>
+                <td class="d">5</td>
                 <td>10</td>
-                <td>16</td>
+                <td class=d>16</td>
                 <td>-6</td>
-                <td>28.6</td>
+                <td class=d>28.6</td>
             </tr>
             <tr>
-                <td>19</td>
-                <td>Vasco</td>
-                <td>5</td>
+                <td class="rebaixados">19</td>
+                <td class="nomes">Vasco</td>
+                <td class="pontos">5</td>
                 <td>7</td>
-                <td>1</td>
+                <td class="v">1</td>
                 <td>2</td>
-                <td>4</td>
+                <td class="d">4</td>
                 <td>5</td>
-                <td>12</td>
+                <td class=d>12</td>
                 <td>-7</td>
-                <td>23.8</td>
+                <td class=d>23.8</td>
             </tr>
             <tr>
-                <td>20</td>
-                <td>Atlético-GO</td>
-                <td>1</td>
+                <td class="rebaixados">20</td>
+                <td class="nomes">Atlético-GO</td>
+                <td class="pontos">1</td>
                 <td>6</td>
-                <td>0</td>
+                <td class="v">0</td>
                 <td>1</td>
-                <td>5</td>
+                <td class="d">5</td>
                 <td>3</td>
-                <td>9</td>
+                <td class="d">9</td>
                 <td>-6</td>
-                <td>5.6</td>
+                <td class="d">5.6</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="11" class="siglas">
+                    TAÇA LIBERTADORES PRÉ LIBERTADORES SUL-AMERICANA  REBAIXADOS
+                </td>
+            </tr>
+            <tr>
+                <td colspan="11" class="significados">
+                    P pontos J jogos V vitórias E empates D derrotas GP gols pró GC gols contra SG saldo de gol (%) aproveitamento
+                </td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
